# BlackholeSimulator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
include/: Constants.hpp  LensingMath.hpp  Particle.hpp  Trail.hpp  Vec2f.hpp
src/: LensingMath.cpp  Particle.cpp  Trail.cpp  main.cpp
